# PortfolioProject

./: .gitignore  AppInsights.ipynb  README.md  app.py  apple_apps.db  behoerden.ipynb  main.py  meine_gefilterten_apps.csv  pyproject.toml  test.ipynb
