[project]
name = "portfolioproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
